[package]
name = "crypto_broker_web"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.3", features = ["web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "console", "Window", "IdbDatabase", "IdbFactory", "IdbOpenDbRequest", "IdbRequest", "IdbObjectStore", "IdbTransaction", "IdbTransactionMode", "IdbVersionChangeEvent"] }
js-sys = "0.3"
futures-util = "0.3"
